--- a/index.html
+++ b/index.html
@@ -30,5 +30,7 @@
 </head>
 <body class="bg-slate-100 text-slate-900">
     <div id="root"></div>
+    <!-- Point d'entrée indispensable pour charger l'application -->
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
