--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
 <body class="bg-slate-100 text-slate-900">
     <div id="root"></div>
     <!-- Point d'entrée indispensable pour charger l'application -->
-    <script type="module" src="./index.tsx"></script>
+    <script type="module" src="/src/index.tsx"></script>
 </body>
 </html>
