--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -8,19 +7,26 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Inter', sans-serif; }
-        .glass { background: rgba(255, 255, 255, 0.8); backdrop-filter: blur(10px); }
+        body { 
+            font-family: 'Inter', sans-serif; 
+        }
+        .glass { 
+            background: rgba(255, 255, 255, 0.8); 
+            backdrop-filter: blur(10px); 
+        }
         @keyframes bounce-slow {
           0%, 100% { transform: translateY(-5%) rotate(6deg); }
           50% { transform: translateY(0) rotate(6deg); }
         }
-        .animate-bounce-slow { animation: bounce-slow 3s infinite ease-in-out; }
-   
-</script>
+        .animate-bounce-slow { 
+            animation: bounce-slow 3s infinite ease-in-out; 
+        }
+    </style>
 </head>
 <body class="bg-slate-100 text-slate-900">
     <div id="root"></div>
-    <!-- Point d'entrée indispensable pour charger l'application -->
+    
+    <!-- Point d'entrée de l'application React -->
     <script type="module" src="/src/index.tsx"></script>
 </body>
 </html>
